{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 3452,
  "lineage": "894b14e6-388c-4842-355a-bb622112abab",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "k8s_vpn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group/sg-088e48f7ee7ff768d",
            "description": "default-allow-all-traffic",
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "k8s-vpn-sg"
                ]
              }
            ],
            "id": "sg-088e48f7ee7ff768d",
            "name": "default-allow-all-traffic",
            "tags": {
              "Name": "k8s-vpn-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ed3e188a71dc9c6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "dattran_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:subnet/subnet-013e678bbcfc095eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "available_ip_address_count": 4083,
            "cidr_block": "10.0.208.0/20",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "private-subnet-1(real)"
                ]
              }
            ],
            "id": "subnet-013e678bbcfc095eb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "296725355870",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "private-subnet-1(real)"
            },
            "vpc_id": "vpc-03ed3e188a71dc9c6"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "dattran_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:subnet/subnet-0c5c1d3025c08f622",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "available_ip_address_count": 245,
            "cidr_block": "10.0.1.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "public-subnet"
                ]
              }
            ],
            "id": "subnet-0c5c1d3025c08f622",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "296725355870",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-03ed3e188a71dc9c6"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "dattran_subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:subnet/subnet-057b93341bbdc3480",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "available_ip_address_count": 8186,
            "cidr_block": "10.0.32.0/19",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "public-subnet-1"
                ]
              }
            ],
            "id": "subnet-057b93341bbdc3480",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "296725355870",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-03ed3e188a71dc9c6"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "dattran_subnet_public_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:subnet/subnet-043e9f72211503059",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "available_ip_address_count": 8186,
            "cidr_block": "10.0.224.0/19",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "public-subnet-forALB"
                ]
              }
            ],
            "id": "subnet-043e9f72211503059",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "296725355870",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "public-subnet-forALB"
            },
            "vpc_id": "vpc-03ed3e188a71dc9c6"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "dattran_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:vpc/vpc-03ed3e188a71dc9c6",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-02cd218d15d068ecf",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0afb412ab1a4fa4b6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "dattran-vpc"
                ]
              }
            ],
            "id": "vpc-03ed3e188a71dc9c6",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0555f9a0fe4203f4b",
            "owner_id": "296725355870",
            "tags": {
              "Name": "dattran-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8s_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00d8fc944fb171e29",
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:instance/i-09f80875d6451c756",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "k8s-node-ebs-profile",
            "id": "i-09f80875d6451c756",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "k8s",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c190d5a43e86e615",
            "private_dns": "ip-10-0-1-214.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": true,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.214",
            "public_dns": "ec2-47-129-157-222.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "47.129.157.222",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02523437199858f96",
                "volume_size": 50,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0a379339f4c5c9bf3"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c5c1d3025c08f622",
            "tags": {
              "Name": "k8s_master"
            },
            "tags_all": {
              "Name": "k8s_master"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a379339f4c5c9bf3"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.k8s_node_ebs_profile_1",
            "aws_iam_role.k8s_node_ebs_role_1",
            "aws_instance.k8s_nginx_lb",
            "aws_key_pair.k8s",
            "aws_security_group.k8s_master",
            "aws_security_group.k8s_nginx_lb",
            "data.aws_subnet.dattran_subnet",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8s_master_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00d8fc944fb171e29",
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:instance/i-0aad0fbc5e7052a7e",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "k8s-node-ebs-profile",
            "id": "i-0aad0fbc5e7052a7e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "k8s",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04743de497571d23a",
            "private_dns": "ip-10-0-209-226.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.209.226",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0eff11cbc7df66982",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0a379339f4c5c9bf3"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-013e678bbcfc095eb",
            "tags": {
              "Name": "k8s_master_2"
            },
            "tags_all": {
              "Name": "k8s_master_2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a379339f4c5c9bf3"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.k8s_node_ebs_profile_1",
            "aws_iam_role.k8s_node_ebs_role_1",
            "aws_instance.k8s_master",
            "aws_instance.k8s_nginx_lb",
            "aws_key_pair.k8s",
            "aws_security_group.k8s_master",
            "aws_security_group.k8s_nginx_lb",
            "data.aws_subnet.dattran_private_subnet",
            "data.aws_subnet.dattran_subnet",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8s_nfs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00d8fc944fb171e29",
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:instance/i-03c8a34c2db56d6fe",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "k8s-node-ebs-profile",
            "id": "i-03c8a34c2db56d6fe",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "k8s",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00890204a51b3dfec",
            "private_dns": "ip-10-0-220-34.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.220.34",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-052cc923708d4e1bd",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0a1473a76c1c5c605"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-013e678bbcfc095eb",
            "tags": {
              "Name": "k8s_nfs"
            },
            "tags_all": {
              "Name": "k8s_nfs"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a1473a76c1c5c605"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.k8s_node_ebs_profile_1",
            "aws_iam_role.k8s_node_ebs_role_1",
            "aws_instance.k8s_master",
            "aws_instance.k8s_nginx_lb",
            "aws_key_pair.k8s",
            "aws_security_group.k8s_master",
            "aws_security_group.k8s_nfs",
            "aws_security_group.k8s_nginx_lb",
            "data.aws_subnet.dattran_private_subnet",
            "data.aws_subnet.dattran_subnet",
            "data.aws_vpc.dattran_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00d8fc944fb171e29",
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:instance/i-03ac82f028e27f528",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "k8s-node-ebs-profile",
            "id": "i-03ac82f028e27f528",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "k8s",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0dcb92f7dae5ed242",
            "private_dns": "ip-10-0-223-86.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.223.86",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07ced1080b40e51cf",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0a1473a76c1c5c605"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-013e678bbcfc095eb",
            "tags": {
              "Name": "k8s_nfs"
            },
            "tags_all": {
              "Name": "k8s_nfs"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a1473a76c1c5c605"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.k8s_node_ebs_profile_1",
            "aws_iam_role.k8s_node_ebs_role_1",
            "aws_instance.k8s_master",
            "aws_instance.k8s_nginx_lb",
            "aws_key_pair.k8s",
            "aws_security_group.k8s_master",
            "aws_security_group.k8s_nfs",
            "aws_security_group.k8s_nginx_lb",
            "data.aws_subnet.dattran_private_subnet",
            "data.aws_subnet.dattran_subnet",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8s_nginx_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00d8fc944fb171e29",
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:instance/i-00e920b572fd1eef4",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00e920b572fd1eef4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "k8s",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-097d91a31d480640d",
            "private_dns": "ip-10-0-1-106.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": true,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.106",
            "public_dns": "ec2-54-254-6-64.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.254.6.64",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-034e809d470ea9460",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0e94e691e74f987ae"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c5c1d3025c08f622",
            "tags": {
              "Name": "k8s_nginx_lb"
            },
            "tags_all": {
              "Name": "k8s_nginx_lb"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e94e691e74f987ae"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.k8s",
            "aws_security_group.k8s_nginx_lb",
            "data.aws_subnet.dattran_subnet",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8s_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00d8fc944fb171e29",
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:instance/i-0435d6c9274dcbbd5",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "k8s-node-ebs-profile",
            "id": "i-0435d6c9274dcbbd5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "k8s",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f9003b5a5935fe7a",
            "private_dns": "ip-10-0-213-144.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.213.144",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01b659290659043e0",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-00d1ad49c491d22f9"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-013e678bbcfc095eb",
            "tags": {
              "Name": "k8s_worker-0"
            },
            "tags_all": {
              "Name": "k8s_worker-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00d1ad49c491d22f9"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.k8s_node_ebs_profile_1",
            "aws_iam_role.k8s_node_ebs_role_1",
            "aws_instance.k8s_master",
            "aws_instance.k8s_nginx_lb",
            "aws_key_pair.k8s",
            "aws_security_group.k8s_master",
            "aws_security_group.k8s_nginx_lb",
            "aws_security_group.k8s_worker",
            "data.aws_subnet.dattran_private_subnet",
            "data.aws_subnet.dattran_subnet",
            "data.aws_vpc.dattran_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00d8fc944fb171e29",
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:instance/i-0c30ea60820133eac",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "k8s-node-ebs-profile",
            "id": "i-0c30ea60820133eac",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "k8s",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a1b22994686e5f35",
            "private_dns": "ip-10-0-223-157.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.223.157",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0bad9ed858d7bd2aa",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-00d1ad49c491d22f9"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-013e678bbcfc095eb",
            "tags": {
              "Name": "k8s_worker-1"
            },
            "tags_all": {
              "Name": "k8s_worker-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00d1ad49c491d22f9"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.k8s_node_ebs_profile_1",
            "aws_iam_role.k8s_node_ebs_role_1",
            "aws_instance.k8s_master",
            "aws_instance.k8s_nginx_lb",
            "aws_key_pair.k8s",
            "aws_security_group.k8s_master",
            "aws_security_group.k8s_nginx_lb",
            "aws_security_group.k8s_worker",
            "data.aws_subnet.dattran_private_subnet",
            "data.aws_subnet.dattran_subnet",
            "data.aws_vpc.dattran_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00d8fc944fb171e29",
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:instance/i-0d8376c6f60b99463",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "k8s-node-ebs-profile",
            "id": "i-0d8376c6f60b99463",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "k8s",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09f992617bc8e4407",
            "private_dns": "ip-10-0-212-104.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.212.104",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-090b00be69cd79014",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-00d1ad49c491d22f9"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-013e678bbcfc095eb",
            "tags": {
              "Name": "k8s_worker-2"
            },
            "tags_all": {
              "Name": "k8s_worker-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00d1ad49c491d22f9"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.k8s_node_ebs_profile_1",
            "aws_iam_role.k8s_node_ebs_role_1",
            "aws_instance.k8s_master",
            "aws_instance.k8s_nginx_lb",
            "aws_key_pair.k8s",
            "aws_security_group.k8s_master",
            "aws_security_group.k8s_nginx_lb",
            "aws_security_group.k8s_worker",
            "data.aws_subnet.dattran_private_subnet",
            "data.aws_subnet.dattran_subnet",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "k8s_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:296725355870:loadbalancer/app/k8s-lb/090f8808695cc7d6",
            "arn_suffix": "app/k8s-lb/090f8808695cc7d6",
            "desync_mitigation_mode": "defensive",
            "dns_name": "k8s-lb-60039731.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:296725355870:loadbalancer/app/k8s-lb/090f8808695cc7d6",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "k8s-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0e94e691e74f987ae"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-043e9f72211503059"
              },
              {
                "subnet_id": "subnet-057b93341bbdc3480"
              },
              {
                "subnet_id": "subnet-0c5c1d3025c08f622"
              }
            ],
            "subnets": [
              "subnet-043e9f72211503059",
              "subnet-057b93341bbdc3480",
              "subnet-0c5c1d3025c08f622"
            ],
            "tags": {
              "Name": "k8s-main-alb"
            },
            "tags_all": {
              "Name": "k8s-main-alb"
            },
            "vpc_id": "vpc-03ed3e188a71dc9c6",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_nginx_lb",
            "data.aws_subnet.dattran_subnet",
            "data.aws_subnet.dattran_subnet-1",
            "data.aws_subnet.dattran_subnet_public_alb",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:296725355870:listener/app/k8s-lb/090f8808695cc7d6/f2556bebaf8a8cd2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:296725355870:targetgroup/k8s-tg-lb/01d1cbbf89f41ede",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:296725355870:listener/app/k8s-lb/090f8808695cc7d6/f2556bebaf8a8cd2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:296725355870:loadbalancer/app/k8s-lb/090f8808695cc7d6",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.k8s_node_ebs_profile_1",
            "aws_iam_role.k8s_node_ebs_role_1",
            "aws_instance.k8s_master",
            "aws_instance.k8s_nfs",
            "aws_instance.k8s_nginx_lb",
            "aws_instance.k8s_worker",
            "aws_key_pair.k8s",
            "aws_lb.k8s_alb",
            "aws_lb_target_group.k8s_tg_lb",
            "aws_security_group.k8s_master",
            "aws_security_group.k8s_nfs",
            "aws_security_group.k8s_nginx_lb",
            "aws_security_group.k8s_worker",
            "data.aws_subnet.dattran_private_subnet",
            "data.aws_subnet.dattran_subnet",
            "data.aws_subnet.dattran_subnet-1",
            "data.aws_subnet.dattran_subnet_public_alb",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "k8s_tg_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:296725355870:targetgroup/k8s-tg-lb/01d1cbbf89f41ede",
            "arn_suffix": "targetgroup/k8s-tg-lb/01d1cbbf89f41ede",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:296725355870:targetgroup/k8s-tg-lb/01d1cbbf89f41ede",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "k8s-tg-lb",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-03ed3e188a71dc9c6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.k8s_node_ebs_profile_1",
            "aws_iam_role.k8s_node_ebs_role_1",
            "aws_instance.k8s_master",
            "aws_instance.k8s_nfs",
            "aws_instance.k8s_nginx_lb",
            "aws_instance.k8s_worker",
            "aws_key_pair.k8s",
            "aws_security_group.k8s_master",
            "aws_security_group.k8s_nfs",
            "aws_security_group.k8s_nginx_lb",
            "aws_security_group.k8s_worker",
            "data.aws_subnet.dattran_private_subnet",
            "data.aws_subnet.dattran_subnet",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tg_attachment_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:296725355870:targetgroup/k8s-tg-lb/01d1cbbf89f41ede-20260413020959931400000009",
            "port": 32222,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:296725355870:targetgroup/k8s-tg-lb/01d1cbbf89f41ede",
            "target_id": "i-0435d6c9274dcbbd5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.k8s_node_ebs_profile_1",
            "aws_iam_role.k8s_node_ebs_role_1",
            "aws_instance.k8s_master",
            "aws_instance.k8s_nfs",
            "aws_instance.k8s_nginx_lb",
            "aws_instance.k8s_worker",
            "aws_key_pair.k8s",
            "aws_lb_target_group.k8s_tg_lb",
            "aws_security_group.k8s_master",
            "aws_security_group.k8s_nfs",
            "aws_security_group.k8s_nginx_lb",
            "aws_security_group.k8s_worker",
            "data.aws_subnet.dattran_private_subnet",
            "data.aws_subnet.dattran_subnet",
            "data.aws_vpc.dattran_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:296725355870:targetgroup/k8s-tg-lb/01d1cbbf89f41ede-2026041302100030980000000b",
            "port": 32222,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:296725355870:targetgroup/k8s-tg-lb/01d1cbbf89f41ede",
            "target_id": "i-0c30ea60820133eac"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.k8s_node_ebs_profile_1",
            "aws_iam_role.k8s_node_ebs_role_1",
            "aws_instance.k8s_master",
            "aws_instance.k8s_nfs",
            "aws_instance.k8s_nginx_lb",
            "aws_instance.k8s_worker",
            "aws_key_pair.k8s",
            "aws_lb_target_group.k8s_tg_lb",
            "aws_security_group.k8s_master",
            "aws_security_group.k8s_nfs",
            "aws_security_group.k8s_nginx_lb",
            "aws_security_group.k8s_worker",
            "data.aws_subnet.dattran_private_subnet",
            "data.aws_subnet.dattran_subnet",
            "data.aws_vpc.dattran_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:296725355870:targetgroup/k8s-tg-lb/01d1cbbf89f41ede-2026041302100000100000000a",
            "port": 32222,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:296725355870:targetgroup/k8s-tg-lb/01d1cbbf89f41ede",
            "target_id": "i-0d8376c6f60b99463"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.k8s_node_ebs_profile_1",
            "aws_iam_role.k8s_node_ebs_role_1",
            "aws_instance.k8s_master",
            "aws_instance.k8s_nfs",
            "aws_instance.k8s_nginx_lb",
            "aws_instance.k8s_worker",
            "aws_key_pair.k8s",
            "aws_lb_target_group.k8s_tg_lb",
            "aws_security_group.k8s_master",
            "aws_security_group.k8s_nfs",
            "aws_security_group.k8s_nginx_lb",
            "aws_security_group.k8s_worker",
            "data.aws_subnet.dattran_private_subnet",
            "data.aws_subnet.dattran_subnet",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "k8s_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group/sg-0a379339f4c5c9bf3",
            "description": "k8s master sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a379339f4c5c9bf3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 10248,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10260
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 2379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2380
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 32767
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 444,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 444
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6783,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6783
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6784,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 6784
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 81,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 81
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8285,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 8285
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8472,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 8472
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e94e691e74f987ae"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "k8s_master_sg",
            "name_prefix": "",
            "owner_id": "296725355870",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "k8s_master_sg"
            },
            "tags_all": {
              "Name": "k8s_master_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ed3e188a71dc9c6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "k8s_nfs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group/sg-0a1473a76c1c5c605",
            "description": "k8s nfs",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a1473a76c1c5c605",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-00d1ad49c491d22f9",
                  "sg-088e48f7ee7ff768d",
                  "sg-0a379339f4c5c9bf3"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "k8s_nfs",
            "name_prefix": "",
            "owner_id": "296725355870",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "k8s_nfs"
            },
            "tags_all": {
              "Name": "k8s_nfs"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ed3e188a71dc9c6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "k8s_nginx_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group/sg-0e94e691e74f987ae",
            "description": "k8s nginx lb sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e94e691e74f987ae",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 32767
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9991,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9991
              }
            ],
            "name": "k8s_nginx_lb_sg",
            "name_prefix": "",
            "owner_id": "296725355870",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "k8s_nginx_lb_sg"
            },
            "tags_all": {
              "Name": "k8s_nginx_lb_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ed3e188a71dc9c6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "k8s_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group/sg-00d1ad49c491d22f9",
            "description": "k8s worker sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00d1ad49c491d22f9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 10248,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10260
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 2379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2380
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 32767
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6783,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6783
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6784,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 6784
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8285,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 8285
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8472,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 8472
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e94e691e74f987ae"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "k8s_worker_sg",
            "name_prefix": "",
            "owner_id": "296725355870",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "k8s_worker_sg"
            },
            "tags_all": {
              "Name": "k8s_worker_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ed3e188a71dc9c6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nfs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group/sg-03a25f3be67de5c36",
            "description": "nfs sg",
            "egress": [],
            "id": "sg-03a25f3be67de5c36",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "nfs_sg",
            "name_prefix": "",
            "owner_id": "296725355870",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nfs_sg"
            },
            "tags_all": {
              "Name": "nfs_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ed3e188a71dc9c6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-06992a6cc9b78298a",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-06992a6cc9b78298a",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a379339f4c5c9bf3",
            "security_group_rule_id": "sgr-06992a6cc9b78298a",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_master",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_nfs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-07c5251dcfc15933c",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-07c5251dcfc15933c",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a1473a76c1c5c605",
            "security_group_rule_id": "sgr-07c5251dcfc15933c",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_nfs",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_nginx_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-025c463cb3f04fbf4",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-025c463cb3f04fbf4",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0e94e691e74f987ae",
            "security_group_rule_id": "sgr-025c463cb3f04fbf4",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_nginx_lb",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-0dc1c4003361213e0",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0dc1c4003361213e0",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-00d1ad49c491d22f9",
            "security_group_rule_id": "sgr-0dc1c4003361213e0",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_worker",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ETCD",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-0cf7ae8f9795f558a",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 2379,
            "id": "sgr-0cf7ae8f9795f558a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a379339f4c5c9bf3",
            "security_group_rule_id": "sgr-0cf7ae8f9795f558a",
            "tags": null,
            "tags_all": {},
            "to_port": 2380
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_master",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ETCD_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-00b7e422c32d7cc7e",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 2379,
            "id": "sgr-00b7e422c32d7cc7e",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-00d1ad49c491d22f9",
            "security_group_rule_id": "sgr-00b7e422c32d7cc7e",
            "tags": null,
            "tags_all": {},
            "to_port": 2380
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_worker",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "HTTP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-08a9666b2ba32f527",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-08a9666b2ba32f527",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a379339f4c5c9bf3",
            "security_group_rule_id": "sgr-08a9666b2ba32f527",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_master",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "HTTPS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-00727f43b4dadfd06",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-00727f43b4dadfd06",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a379339f4c5c9bf3",
            "security_group_rule_id": "sgr-00727f43b4dadfd06",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_master",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "HTTPS_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-019f9d3d0aad7438c",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-019f9d3d0aad7438c",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-00d1ad49c491d22f9",
            "security_group_rule_id": "sgr-019f9d3d0aad7438c",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_worker",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "HTTP_8080",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-0072c5019a51d5710",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8080,
            "id": "sgr-0072c5019a51d5710",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a379339f4c5c9bf3",
            "security_group_rule_id": "sgr-0072c5019a51d5710",
            "tags": null,
            "tags_all": {},
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_master",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "HTTP_8080_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-0d91d2efe75e1185c",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8080,
            "id": "sgr-0d91d2efe75e1185c",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-00d1ad49c491d22f9",
            "security_group_rule_id": "sgr-0d91d2efe75e1185c",
            "tags": null,
            "tags_all": {},
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_worker",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "HTTP_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-04edd5a626b42106f",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-04edd5a626b42106f",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-00d1ad49c491d22f9",
            "security_group_rule_id": "sgr-04edd5a626b42106f",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_worker",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "NFS_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-0dd12f22db769518f",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 2049,
            "id": "sgr-0dd12f22db769518f",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-03a25f3be67de5c36",
            "security_group_rule_id": "sgr-0dd12f22db769518f",
            "tags": null,
            "tags_all": {},
            "to_port": 2049
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.nfs",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "NodePort_Service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-0f6e1ff39334e61da",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 30000,
            "id": "sgr-0f6e1ff39334e61da",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a379339f4c5c9bf3",
            "security_group_rule_id": "sgr-0f6e1ff39334e61da",
            "tags": null,
            "tags_all": {},
            "to_port": 32767
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_master",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "NodePort_Service_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-01d36293d0963cbce",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 30000,
            "id": "sgr-01d36293d0963cbce",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-00d1ad49c491d22f9",
            "security_group_rule_id": "sgr-01d36293d0963cbce",
            "tags": null,
            "tags_all": {},
            "to_port": 32767
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_worker",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "Rancher_HTTPS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-09e2134b6c551650f",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 444,
            "id": "sgr-09e2134b6c551650f",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a379339f4c5c9bf3",
            "security_group_rule_id": "sgr-09e2134b6c551650f",
            "tags": null,
            "tags_all": {},
            "to_port": 444
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_master",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "SSH",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-0c1dc785a3010cea6",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0c1dc785a3010cea6",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a379339f4c5c9bf3",
            "security_group_rule_id": "sgr-0c1dc785a3010cea6",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_master",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "SSH_nginx_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-02ec09ea835c37802",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-02ec09ea835c37802",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0e94e691e74f987ae",
            "security_group_rule_id": "sgr-02ec09ea835c37802",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_nginx_lb",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "SSH_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-03b5bc9b473b8d1b5",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-03b5bc9b473b8d1b5",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-00d1ad49c491d22f9",
            "security_group_rule_id": "sgr-03b5bc9b473b8d1b5",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_worker",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_all_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-0e72b60aba53aab33",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0e72b60aba53aab33",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a1473a76c1c5c605",
            "security_group_rule_id": "sgr-0e72b60aba53aab33",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_nfs",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_all_traffic_nfs_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-0c0f58b1e344e4936",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0c0f58b1e344e4936",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0a379339f4c5c9bf3",
            "security_group_id": "sg-0a1473a76c1c5c605",
            "security_group_rule_id": "sgr-0c0f58b1e344e4936",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_master",
            "aws_security_group.k8s_nfs",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_all_traffic_nfs_vpn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-04f0be4375cbc542f",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-04f0be4375cbc542f",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-088e48f7ee7ff768d",
            "security_group_id": "sg-0a1473a76c1c5c605",
            "security_group_rule_id": "sgr-04f0be4375cbc542f",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_nfs",
            "data.aws_security_group.k8s_vpn",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_all_traffic_nfs_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-05dd3c9d402465f4f",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-05dd3c9d402465f4f",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-00d1ad49c491d22f9",
            "security_group_id": "sg-0a1473a76c1c5c605",
            "security_group_rule_id": "sgr-05dd3c9d402465f4f",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_nfs",
            "aws_security_group.k8s_worker",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-034d44bc8a9a663e1",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-034d44bc8a9a663e1",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0e94e691e74f987ae",
            "security_group_rule_id": "sgr-034d44bc8a9a663e1",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_nginx_lb",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-0add10efde0b41cc3",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0add10efde0b41cc3",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0e94e691e74f987ae",
            "security_group_rule_id": "sgr-0add10efde0b41cc3",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_nginx_lb",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-08fa09aa4816beb59",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 9991,
            "id": "sgr-08fa09aa4816beb59",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0e94e691e74f987ae",
            "security_group_rule_id": "sgr-08fa09aa4816beb59",
            "tags": null,
            "tags_all": {},
            "to_port": 9991
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_nginx_lb",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "api_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-01187f8d978cd8c5d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 6443,
            "id": "sgr-01187f8d978cd8c5d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a379339f4c5c9bf3",
            "security_group_rule_id": "sgr-01187f8d978cd8c5d",
            "tags": null,
            "tags_all": {},
            "to_port": 6443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_master",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "api_server_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-02abac088fc7d6527",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 6443,
            "id": "sgr-02abac088fc7d6527",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-00d1ad49c491d22f9",
            "security_group_rule_id": "sgr-02abac088fc7d6527",
            "tags": null,
            "tags_all": {},
            "to_port": 6443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_worker",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "flannel_UDP_BE",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-05080621c22b66805",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8285,
            "id": "sgr-05080621c22b66805",
            "ip_protocol": "udp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a379339f4c5c9bf3",
            "security_group_rule_id": "sgr-05080621c22b66805",
            "tags": null,
            "tags_all": {},
            "to_port": 8285
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_master",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "flannel_UDP_BE_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-07b59b37b0fed82bf",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8285,
            "id": "sgr-07b59b37b0fed82bf",
            "ip_protocol": "udp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-00d1ad49c491d22f9",
            "security_group_rule_id": "sgr-07b59b37b0fed82bf",
            "tags": null,
            "tags_all": {},
            "to_port": 8285
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_worker",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "flannel_UDP_VXLAN",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-073365aa891c22ad6",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8472,
            "id": "sgr-073365aa891c22ad6",
            "ip_protocol": "udp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a379339f4c5c9bf3",
            "security_group_rule_id": "sgr-073365aa891c22ad6",
            "tags": null,
            "tags_all": {},
            "to_port": 8472
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_master",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "flannel_UDP_VXLAN_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-049297b8fcc800e72",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8472,
            "id": "sgr-049297b8fcc800e72",
            "ip_protocol": "udp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-00d1ad49c491d22f9",
            "security_group_rule_id": "sgr-049297b8fcc800e72",
            "tags": null,
            "tags_all": {},
            "to_port": 8472
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_worker",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "internal_traffic_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-04fb1a76e9d56e7ab",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 0,
            "id": "sgr-04fb1a76e9d56e7ab",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0e94e691e74f987ae",
            "security_group_id": "sg-0a379339f4c5c9bf3",
            "security_group_rule_id": "sgr-04fb1a76e9d56e7ab",
            "tags": null,
            "tags_all": {},
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_master",
            "aws_security_group.k8s_nginx_lb",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "internal_traffic_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-0b63c97f7d5ace7c8",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 0,
            "id": "sgr-0b63c97f7d5ace7c8",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0e94e691e74f987ae",
            "security_group_id": "sg-00d1ad49c491d22f9",
            "security_group_rule_id": "sgr-0b63c97f7d5ace7c8",
            "tags": null,
            "tags_all": {},
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_nginx_lb",
            "aws_security_group.k8s_worker",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "kube_api_6443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-0023c65787e51d66c",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 6443,
            "id": "sgr-0023c65787e51d66c",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0e94e691e74f987ae",
            "security_group_rule_id": "sgr-0023c65787e51d66c",
            "tags": null,
            "tags_all": {},
            "to_port": 6443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_nginx_lb",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "kubelet_and_control_plane",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-0402105566a0ab7fb",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 10248,
            "id": "sgr-0402105566a0ab7fb",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a379339f4c5c9bf3",
            "security_group_rule_id": "sgr-0402105566a0ab7fb",
            "tags": null,
            "tags_all": {},
            "to_port": 10260
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_master",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "kubelet_and_control_plane_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-05438b5f9e3b306ca",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 10248,
            "id": "sgr-05438b5f9e3b306ca",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-00d1ad49c491d22f9",
            "security_group_rule_id": "sgr-05438b5f9e3b306ca",
            "tags": null,
            "tags_all": {},
            "to_port": 10260
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_worker",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "nodePort",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-03e5210c9a606cba9",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 30000,
            "id": "sgr-03e5210c9a606cba9",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0e94e691e74f987ae",
            "security_group_rule_id": "sgr-03e5210c9a606cba9",
            "tags": null,
            "tags_all": {},
            "to_port": 32767
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_nginx_lb",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "rancher_81",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-089adac9be3e01a0b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 81,
            "id": "sgr-089adac9be3e01a0b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a379339f4c5c9bf3",
            "security_group_rule_id": "sgr-089adac9be3e01a0b",
            "tags": null,
            "tags_all": {},
            "to_port": 81
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_master",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "weavenet_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-0270371c6b3f9cce4",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 6783,
            "id": "sgr-0270371c6b3f9cce4",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a379339f4c5c9bf3",
            "security_group_rule_id": "sgr-0270371c6b3f9cce4",
            "tags": null,
            "tags_all": {},
            "to_port": 6783
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_master",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "weavenet_tcp_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-0fa527b19931834b0",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 6783,
            "id": "sgr-0fa527b19931834b0",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-00d1ad49c491d22f9",
            "security_group_rule_id": "sgr-0fa527b19931834b0",
            "tags": null,
            "tags_all": {},
            "to_port": 6783
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_worker",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "weavenet_udp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-0278b4f4f9c604133",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 6784,
            "id": "sgr-0278b4f4f9c604133",
            "ip_protocol": "udp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a379339f4c5c9bf3",
            "security_group_rule_id": "sgr-0278b4f4f9c604133",
            "tags": null,
            "tags_all": {},
            "to_port": 6784
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_master",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "weavenet_udp_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:296725355870:security-group-rule/sgr-032e47f6ddf434753",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 6784,
            "id": "sgr-032e47f6ddf434753",
            "ip_protocol": "udp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-00d1ad49c491d22f9",
            "security_group_rule_id": "sgr-032e47f6ddf434753",
            "tags": null,
            "tags_all": {},
            "to_port": 6784
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s_worker",
            "data.aws_vpc.dattran_vpc"
          ]
        }
      ]
    }
  ]
}